# rsagenerate

./: Cargo.toml  README.md  package.json
src/: lib.rs
sveltekit-rust-wasm/: package-lock.json  package.json  svelte.config.js  tsconfig.json
sveltekit-rust-wasm/src/components/: HelloWasm.svelte
sveltekit-rust-wasm/src/lib/: HelloWasm.svelte
sveltekit-rust-wasm/src/routes/: index.svelte
sveltekit-rust-wasm/wasm/: Cargo.toml  LICENSE_MIT
sveltekit-rust-wasm/wasm/src/: lib.rs
