[package]
name = "rsagenerate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-drbg = { git = "https://github.com/sorpaas/rust-hmac-drbg", version = "0.3.0" }
sha2 = "0.9"
hex = "0.4"
typenum = "1.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = "0.6.1"
getrandom = {version = "0.2", features = ["js"] } # // works in wasm/js/browser
rand = "0.8.5"